Date Patterns Hotfix